--- a/simbe/Base.lproj/Main.storyboard
+++ b/simbe/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SSO-oV-0mA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SSO-oV-0mA">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -60,19 +60,27 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="Home" id="4nA-79-Tbl">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="eli-qm-sR4">
-                            <connections>
-                                <segue destination="4Nf-X1-i74" kind="show" identifier="addExpense" id="HvN-9Y-5Jh"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="add" id="eli-qm-sR4">
+                                <connections>
+                                    <segue destination="4Nf-X1-i74" kind="show" identifier="addExpense" id="HvN-9Y-5Jh"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="이번 달" id="7J5-6x-czG">
+                                <connections>
+                                    <action selector="sortCollectionView:" destination="rVW-TY-8AE" id="0Jv-xb-pCR"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="viewType" destination="7J5-6x-czG" id="GC5-8x-kCj"/>
                         <segue destination="7Hl-yY-HyV" kind="show" id="P9T-Uf-1Ry"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RrV-NC-YeO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5207" y="165"/>
+            <point key="canvasLocation" x="6115.9420289855079" y="164.73214285714286"/>
         </scene>
         <!--Test View Controller-->
         <scene sceneID="4Np-21-NhU">
@@ -82,7 +90,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X3l-fO-mbH" customClass="TestLabel" customModule="simbe" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X3l-fO-mbH" customClass="UICollectionView">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </view>
                         </subviews>
@@ -443,7 +451,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e3J-gn-ze8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6473.913043478261" y="164.73214285714286"/>
+            <point key="canvasLocation" x="7384.057971014493" y="164.73214285714286"/>
         </scene>
         <!--Item-->
         <scene sceneID="zwe-it-a96">
@@ -462,7 +470,93 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NKf-0v-ecr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4473.913043478261" y="164.73214285714286"/>
+            <point key="canvasLocation" x="5384.057971014493" y="164.73214285714286"/>
+        </scene>
+        <!--히스토리-->
+        <scene sceneID="7QS-6R-wqH">
+            <objects>
+                <viewController id="pyV-Hj-xOc" customClass="HistoryCollectionVC" customModule="simbe" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bM8-Xg-SnI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11월" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vln-1I-VSr">
+                                <rect key="frame" x="0.0" y="88" width="414" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="anP-u8-GMD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mUB-1l-436">
+                                <rect key="frame" x="0.0" y="128" width="414" height="685"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewLayout key="collectionViewLayout" id="6cq-wg-QbL" customClass="PinterestTypeLayout" customModule="simbe" customModuleProvider="target"/>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HistoryCollectionCell" id="wxE-Ge-Njt" customClass="HistoryCollectionViewCell" customModule="simbe" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="176" height="125"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="qzC-kd-t0s">
+                                            <rect key="frame" x="0.0" y="0.0" width="176" height="125"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Percent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bz9-Zu-l1J">
+                                                    <rect key="frame" x="67.5" y="84" width="41" height="14"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fku-iA-CSc">
+                                                    <rect key="frame" x="53" y="52" width="70" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="bz9-Zu-l1J" firstAttribute="top" secondItem="fku-iA-CSc" secondAttribute="bottom" constant="11" id="2Bc-E7-Acw"/>
+                                                <constraint firstItem="fku-iA-CSc" firstAttribute="centerX" secondItem="qzC-kd-t0s" secondAttribute="centerX" id="3BA-Oi-W3p"/>
+                                                <constraint firstItem="fku-iA-CSc" firstAttribute="centerY" secondItem="qzC-kd-t0s" secondAttribute="centerY" id="7sH-32-T8p"/>
+                                                <constraint firstItem="bz9-Zu-l1J" firstAttribute="centerX" secondItem="qzC-kd-t0s" secondAttribute="centerX" id="Ci7-17-RJN"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="176" height="125"/>
+                                        <connections>
+                                            <outlet property="categoryLabel" destination="fku-iA-CSc" id="Aye-VG-dmo"/>
+                                            <outlet property="percentLabel" destination="bz9-Zu-l1J" id="kfm-yi-4Sj"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="pyV-Hj-xOc" id="Wgu-dz-6Ij"/>
+                                    <outlet property="delegate" destination="pyV-Hj-xOc" id="nRr-Bt-IEK"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="FSd-Lv-I8P"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="mUB-1l-436" firstAttribute="leading" secondItem="FSd-Lv-I8P" secondAttribute="leading" id="Fqk-Bb-o2k"/>
+                            <constraint firstItem="mUB-1l-436" firstAttribute="top" secondItem="vln-1I-VSr" secondAttribute="bottom" id="OKn-Ar-GbB"/>
+                            <constraint firstItem="vln-1I-VSr" firstAttribute="top" secondItem="FSd-Lv-I8P" secondAttribute="top" id="Oba-Mc-JaI"/>
+                            <constraint firstItem="FSd-Lv-I8P" firstAttribute="trailing" secondItem="vln-1I-VSr" secondAttribute="trailing" id="cJE-5K-aim"/>
+                            <constraint firstItem="vln-1I-VSr" firstAttribute="leading" secondItem="FSd-Lv-I8P" secondAttribute="leading" id="kxN-ow-459"/>
+                            <constraint firstItem="FSd-Lv-I8P" firstAttribute="bottom" secondItem="mUB-1l-436" secondAttribute="bottom" id="qSC-dl-M7e"/>
+                            <constraint firstItem="FSd-Lv-I8P" firstAttribute="trailing" secondItem="mUB-1l-436" secondAttribute="trailing" id="vnB-CS-Qt1"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="히스토리" id="o7O-ip-HUx">
+                        <barButtonItem key="leftBarButtonItem" title="&lt;" id="nBF-AT-hT3"/>
+                        <barButtonItem key="rightBarButtonItem" title="&gt;" id="90U-dJ-fk4"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="collectionView" destination="mUB-1l-436" id="S4V-MH-Wr1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V68-Ot-Jrx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2787" y="177"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="sXO-gu-U9U">
@@ -476,11 +570,30 @@
                     </tabBar>
                     <connections>
                         <segue destination="1tX-BL-9YJ" kind="relationship" relationship="viewControllers" id="nbV-Qx-oJ1"/>
+                        <segue destination="cSX-i1-pA9" kind="relationship" relationship="viewControllers" id="gJR-TF-qjd"/>
+                        <segue destination="B3V-v6-Agf" kind="relationship" relationship="viewControllers" id="aUV-Pk-LYv"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qle-1x-tFy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3563.7681159420295" y="164.73214285714286"/>
+            <point key="canvasLocation" x="4473.913043478261" y="164.73214285714286"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="dkc-Qy-vA4">
+            <objects>
+                <viewController id="cSX-i1-pA9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6sT-Jz-sfc">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="4Ck-XY-URe"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="oRX-dJ-zlD"/>
+                    <navigationItem key="navigationItem" id="7Ml-EM-J2T"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L5G-5r-co8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3514" y="868"/>
         </scene>
         <!--ModelVC-->
         <scene sceneID="Jq4-xx-Rbk">
@@ -923,7 +1036,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P3x-ak-Wto" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7248" y="165"/>
+            <point key="canvasLocation" x="8157.971014492754" y="164.73214285714286"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="HSf-ib-fXN">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="B3V-v6-Agf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="RpG-0M-6dj"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="j32-6g-3d8">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="pyV-Hj-xOc" kind="relationship" relationship="rootViewController" id="yEP-cn-lDw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sHe-Lk-wKl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3555" y="165"/>
         </scene>
     </scenes>
     <resources>
